--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -31,30 +31,71 @@ jobs:
       run: |
         cd android-client
         chmod +x gradlew
+        ls -la gradlew
+
+    - name: List android-client directory
+      run: |
+        echo "=== Root directory ==="
+        ls -la
+        echo ""
+        echo "=== android-client directory ==="
+        ls -la android-client
+        echo ""
+        echo "=== gradle/wrapper directory ==="
+        ls -la android-client/gradle/wrapper || echo "gradle/wrapper not found"
+
+    - name: Check Gradle wrapper
+      run: |
+        cd android-client
+        echo "=== Checking gradlew ==="
+        ./gradlew --version
+
+    - name: Accept Android SDK licenses
+      run: |
+        yes | sdkmanager --licenses || true
 
     - name: Build Debug APK
       run: |
         cd android-client
-        ./gradlew assembleDebug --stacktrace
+        echo "=== Building Debug APK ==="
+        ./gradlew assembleDebug --stacktrace --info || ./gradlew assembleDebug --stacktrace --debug
+
+    - name: Check Debug APK exists
+      run: |
+        echo "=== Checking for APK files ==="
+        find android-client -name "*.apk" -type f || echo "No APK files found"
+        ls -la android-client/app/build/outputs/apk/debug/ 2>/dev/null || echo "Debug directory not found"
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: android-control-debug
-        path: android-client/app/build/outputs/apk/debug/app-debug.apk
+        path: |
+          android-client/app/build/outputs/apk/debug/*.apk
+          android-client/app/build/outputs/apk/debug/**/*.apk
         retention-days: 30
+        if-no-files-found: error
 
     - name: Build Release APK (unsigned)
       run: |
         cd android-client
-        ./gradlew assembleRelease --stacktrace
+        echo "=== Building Release APK ==="
+        ./gradlew assembleRelease --stacktrace --info || ./gradlew assembleRelease --stacktrace --debug
+
+    - name: Check Release APK exists
+      run: |
+        echo "=== Checking for Release APK files ==="
+        ls -la android-client/app/build/outputs/apk/release/ 2>/dev/null || echo "Release directory not found"
 
     - name: Upload Release APK
       uses: actions/upload-artifact@v4
       with:
         name: android-control-release
-        path: android-client/app/build/outputs/apk/release/app-release-unsigned.apk
+        path: |
+          android-client/app/build/outputs/apk/release/*.apk
+          android-client/app/build/outputs/apk/release/**/*.apk
         retention-days: 30
+        if-no-files-found: warn
 
     - name: Get version info
       id: version
@@ -62,6 +103,7 @@ jobs:
         cd android-client
         VERSION_NAME=$(grep "versionName" app/build.gradle.kts | head -1 | awk '{print $3}' | tr -d '"')
         echo "version=${VERSION_NAME}" >> $GITHUB_OUTPUT
+        echo "Version: ${VERSION_NAME}"
 
     - name: Create Release (on main branch)
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
