修复Android SDK许可证接受问题

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -55,7 +55,7 @@ jobs:
 
     - name: Accept Android SDK licenses
       run: |
-        yes | sdkmanager --licenses || true
+        echo "y" | sdkmanager --licenses || true
 
     - name: Build Debug APK
       run: |
