--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -30,8 +30,9 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       with:
-        api-level: 34
-        build-tools: 34.0.0
+        packages: 'platform-tools platforms;android-34 build-tools;34.0.0'
+        accept-android-sdk-licenses: true
+        log-accepted-android-sdk-licenses: true
 
     - name: Grant execute permission for gradlew
       run: |
@@ -83,7 +84,7 @@ jobs:
           android-client/app/build/outputs/apk/debug/*.apk
           android-client/app/build/outputs/apk/debug/**/*.apk
         retention-days: 30
-        if-no-files-found: error
+        if-no-files-found: warn
 
     - name: Build Release APK (unsigned)
       run: |
